VTC-3862 Added service for handling redis key expire events

--- a/env/.env.sample
+++ b/env/.env.sample
@@ -1,4 +1,18 @@
 PORT=
 ENVIRONMENT_NAME=
+DEBUG=
 REDIS_PORT=
 REDIS_HOST=
+
+CONFIG_DATABASE_USER=
+CONFIG_DATABASE_PASSWORD=
+
+IPBX_API_URL=
+
+PBX_OPERATOR_URL=
+PBX_OPERATOR_USER=
+PBX_OPERATOR_PASSWORD=
+
+CENTRAL_API_URL=
+CENTRAL_API_USER=
+CENTRAL_API_PASSWORD=
