--- a/package.json
+++ b/package.json
@@ -13,24 +13,39 @@
   },
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "class-validator-jsonschema": "^1.3.1",
     "cors": "^2.8.5",
+    "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-winston": "^4.0.5",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
+    "mysql": "^2.18.1",
     "redis": "^3.0.2",
+    "routing-controllers": "^0.9.0-alpha.6",
+    "routing-controllers-openapi": "^2.0.1",
+    "swagger-ui-express": "^4.1.4",
     "tslib": "~1.10.0",
+    "typeorm": "^0.2.25",
+    "uuid": "^8.3.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
     "@types/cors": "^2.8.6",
+    "@types/debug": "^4.1.5",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^13.5.3",
     "@types/redis": "^2.8.25",
+    "@types/swagger-ui-express": "^4.1.2",
+    "@types/uuid": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
     "@zerollup/ts-transform-paths": "^1.7.12",
