--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "nanoid": "^3.1.16",
     "redis": "^3.0.2",
     "routing-controllers": "^0.9.0-alpha.6",
     "routing-controllers-openapi": "^2.0.1",
