--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "description": "Scheduler for creating calls",
   "scripts": {
     "build": "rimraf build && tsc -p tsconfig.json && ttsc",
+    "postinstall": "rimraf build && tsc -p tsconfig.json && ttsc",
     "build:watch": "nodemon --watch src --watch config --exec \"ts-node -r tsconfig-paths/register\" src/main.ts",
     "start": "node build/src/main",
-    "typeorm": "ts-node -r ./tsconfig.json ./node_modules/typeorm/cli.js",
-    "test": "jest",
-    "test:watch": "nodemon -e ts,json --watch src --watch config --exec jest -- --collectCoverage false"
+    "typeorm": "ts-node -r ./tsconfig.json ./node_modules/typeorm/cli.js"
   },
   "license": "MIT",
   "dependencies": {
