--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,7 @@
   "singleQuote": true,
   "bracketSpacing": true,
   "tabWidth": 2,
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "arrowParens": "avoid",
+  "trailingComma": "none"
 }
