--- a/env/.env.sample
+++ b/env/.env.sample
@@ -18,3 +18,6 @@ PBX_OPERATOR_PASSWORD=
 CENTRAL_API_URL=
 CENTRAL_API_USER=
 CENTRAL_API_PASSWORD=
+
+PBX_DETAIL_CACHE_DURATION=
+PBX_DETAIL_CACHE_PERIOD=
