--- a/package.json
+++ b/package.json
@@ -1,59 +1,54 @@
 {
   "name": "ctc-scheduler",
   "author": "Sebastian Mach",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "Scheduler for creating calls",
   "scripts": {
     "build": "rimraf build && tsc -p tsconfig.json && ttsc",
     "postinstall": "rimraf build && tsc -p tsconfig.json && ttsc",
     "build:watch": "nodemon --watch src --watch config --exec \"ts-node -r tsconfig-paths/register\" src/main.ts",
     "start": "node build/src/main",
-    "typeorm": "ts-node -r ./tsconfig.json ./node_modules/typeorm/cli.js"
+    "lint": "eslint \"**/*.+(ts|js)\" --fix"
   },
   "license": "MIT",
   "dependencies": {
-    "@types/validator": "^13.7.2",
-    "axios": "^0.19.2",
-    "body-parser": "^1.19.0",
-    "class-transformer": "^0.2.3",
+    "axios": "^0.26.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-winston": "^4.2.0",
-    "multer": "^1.4.2",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
+    "node-cache": "^5.1.2",
     "redis": "^3.0.2",
     "routing-controllers": "^0.9.0-alpha.6",
-    "tslib": "~1.10.0",
+    "tslib": "~2.3.1",
     "typeorm": "^0.2.25",
-    "uuid": "^8.3.0",
-    "winston": "^3.2.1"
+    "winston": "^3.7.2"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.17.1",
-    "@types/cors": "^2.8.6",
-    "@types/debug": "^4.1.5",
+    "@types/debug": "^4.1.7",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.2",
-    "@types/node": "^13.5.3",
-    "@types/redis": "^2.8.25",
-    "@types/uuid": "^8.0.0",
-    "@typescript-eslint/eslint-plugin": "^2.18.0",
-    "@typescript-eslint/parser": "^2.18.0",
-    "@zerollup/ts-transform-paths": "^1.7.12",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-jest": "^23.8.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "nodemon": "^2.0.2",
-    "prettier": "^1.19.1",
-    "rimraf": "^3.0.1",
-    "ts-node": "^8.6.2",
-    "tsconfig-paths": "^3.9.0",
-    "tsutils": "~3.17.0",
-    "ttypescript": "^1.5.10",
-    "typescript": "^3.8.2"
+    "@types/express": "^4.17.8",
+    "@types/node": "^17.0.23",
+    "@types/redis": "^2.8.32",
+    "@types/validator": "^13.7.2",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
+    "@zerollup/ts-transform-paths": "^1.7.18",
+    "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "nodemon": "^2.0.15",
+    "prettier": "^2.6.2",
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.7.0",
+    "tsconfig-paths": "^3.14.1",
+    "tsutils": "~3.21.0",
+    "ttypescript": "^1.5.13",
+    "typescript": "^4.4.4"
   }
 }
