--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "es2017",
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "build",
@@ -13,7 +13,6 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
-    "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
@@ -27,12 +26,16 @@
         "transform": "@zerollup/ts-transform-paths",
         "exclude": ["*"]
       }
-    ],   
+    ],
     "paths": {
-        "@/*": ["./src/*"],
-        "~/*": ["./*"]
-      }
-    },
-  "include": ["src/**/*", "config/**/*", "tests/**/*"],
-  "exclude": ["node_modules", "build"]
+      "@/*": ["./src/*"],
+      "~/*": ["./*"],
+      "entities/*": ["./src/entities/*"],
+      "repositories/*": ["./src/repositories/*"],
+      "services/*": ["./src/services/*"],
+      "model/*": ["./src/model/*"],
+      "interfaces/*": ["./src/interfaces/*"]
+    }
+  },
+  "exclude": ["node_modules", "build", "package.json", "package-lock.json"]
 }
